# Cmake

./: .gitignore  .gitmodules
Learning/: CMakeLists.txt
Learning/01/: CMakeLists.txt
Learning/01/mysub/: CMakeLists.txt
Learning/02/: CMakeLists.txt
Learning/03/: CMakeLists.txt
Learning/03/cmake/: mymod.cmake
Learning/03/src/: main.cpp
Learning/04/: CMakeLists.txt
Learning/05/: CMakeLists.txt
Learning/05/src/: main.cpp
Learning/06/: CMakeLists.txt
Learning/07/: CMakeLists.txt
Learning/07/src/: main.cpp
Learning/07/src/app/: main.cpp
Learning/07/src/selfMath/: CMakeLists.txt
Learning/07/src/selfMath/src/: selfMath.cpp  selfMath.hpp
Learning/08/: CMakeLists.txt
Learning/08/src/app/: main.cpp
Learning/08/src/mylib/: CMakeLists.txt
Learning/08/src/mylib/src/: MyLib.cpp  MyLib.hpp
Learning/08/tests/: CMakeLists.txt  MyLib_Tests.hpp  main.cpp
Learning/08/tests/mylib_tests/: CMakeLists.txt  main.cpp
